--- a/clicking.html
+++ b/clicking.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="main">
+    <div id="container">
         <img src="target.png">
     </div>
 </body>
